--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "vercel-build": "next build -p 3000"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
