--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.58.0",
+    "dayjs": "^1.11.18",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
